--- a/src/components/section1/Section1.css
+++ b/src/components/section1/Section1.css
@@ -78,6 +78,20 @@
     max-width: 400px;
   }
   
+  .image-item.additional-row:nth-child(7) {
+    grid-column: 2 / span 1;
+    grid-row: 3;
+    margin: 0 auto;
+    max-width: calc(50% - 1.5rem);
+  }
+
+  .image-item.additional-row:nth-child(8) {
+    grid-column: 3 / span 1;
+    grid-row: 3;
+    margin: 0 auto;
+    max-width: calc(50% - 1.5rem);
+  }
+  
   .section1-container {
     padding: 2rem 1rem;
     min-height: 60vh;
@@ -111,4 +125,4 @@
     padding: 1.5rem 0.5rem;
   }
 }
-  
+
