--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+@font-face {
+  font-family: 'ABC Arizona Flare Variable';
+  src: url('/fonts/ABC-Arizona-Flare-Variable.woff2') format('woff2'),
+       url('/fonts/ABC-Arizona-Flare-Variable.woff') format('woff'),
+       url('/src//fonts/fonnts.com-ABCArizonaFlareVariable-Trial.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'ABC Arizona Flare Variable', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
